--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	],
 	"scripts": {
 		"dev": "tsc --watch",
-		"build": "rimraf lib && tsc",
+		"build": "tsc",
 		"pack:list": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz",
 		"prepublishOnly": "yarn build",
 		"lint": "eslint . --ext .ts",
@@ -36,29 +36,16 @@
 		"edge",
 		"opera"
 	],
-	"dependencies": {
-		"emoji-log": "^1.0.2"
-	},
 	"devDependencies": {
-		"@abhijithvijayan/eslint-config": "2.5.3",
-		"@abhijithvijayan/eslint-config-airbnb": "^1.0.2",
-		"@abhijithvijayan/tsconfig": "^1.2.0",
-		"@types/loader-utils": "^2.0.1",
-		"@types/webpack": "^4.41.18",
-		"@typescript-eslint/eslint-plugin": "^3.5.0",
-		"@typescript-eslint/parser": "^3.5.0",
-		"babel-eslint": "^10.1.0",
-		"eslint": "^7.3.1",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-import": "^2.22.0",
-		"eslint-plugin-jsx-a11y": "^6.3.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^3.1.4",
-		"eslint-plugin-react": "^7.20.3",
-		"eslint-plugin-react-hooks": "^4.0.5",
+		"@types/jest": "^27.4.1",
+		"@types/loader-utils": "^2.0.3",
+		"@types/node": "^17.0.27",
+		"@types/webpack": "^5.28.0",
+		"jest": "^28.0.0",
 		"prettier": "^2.0.5",
-		"rimraf": "^3.0.2",
-		"typescript": "^3.9.6",
-		"webpack": "^4.43.0"
+		"ts-jest": "^27.1.4",
+		"ts-node": "^10.7.0",
+		"typescript": "^4.6.3",
+		"webpack": "^5.72.0"
 	}
 }
