workflow to publish package

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,14 +1,14 @@
-name: wext-manifest-webpack-plugin
+name: release-bot
 
 on:
   release:
-    types: [created]
+    types: [created, published, released]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 12
@@ -22,7 +22,7 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 12
